@@ -2,6 +2,10 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+Fix server cache which was broken for some reason.
+ common/metaserver.c
+Ryo 2006-02-25
+
 Apply patch #1433271 (code-cleanup) by Stefan Huehner: Add const and static,
 remove unused variables
 ---
